--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -15,7 +15,7 @@
 		<img class="mx-auto position-fixed" style="z-index: -100000; filter: blur(5px); height: 103vh; width: auto;" src="{{ asset('gridbg.gif') }}" alt="Other Image"/>
 		<div class="container main-bg-dark-translucent rounded-5 border border-light d-flex flex-column justify-content-center" style="min-height: 50vh;">
 			<div class="row m-2">
-				<h2 class="text-center accent-color">Game & Web Developer</h2>
+				<h2 class="text-center accent-color">Software & Game Dev</h2>
 			</div>
 			<div class="row my-4 mx-1">
 				<h7 class="white-text text-justify text-lg">
@@ -67,7 +67,7 @@
 		</section>
 	</section>
 
-	<section id="contact" class="accent-bg-dark px-3 rounded-top-5 border border-light" style="min-height: 100vh;  margin-top: -4rem;">
+	<section id="contact" class="accent-bg-dark px-3 rounded-top-5" style="min-height: 100vh;  margin-top: -4rem;">
 		{% include 'contact.twig' %}
 	</section>
 
