--- a/templates/index/AboutMe.twig
+++ b/templates/index/AboutMe.twig
@@ -1,25 +1,30 @@
 
 <section id="aboutme" class="container-fluid d-flex flex-column justify-content-center align-items-center p-0" style="min-height: 93vh; width: 100%; overflow: hidden;">
-    <img class="mx-auto position-fixed" style="z-index: -1000000; filter: blur(4px) brightness(66%); height: 103%; width: 101%;" src="{{ asset('gridbg.gif') }}" alt="Other Image"/>
-    <img class="mx-auto position-fixed bg-dark" style="z-index: -100000; filter: blur(2.5px) brightness(70%); height: 102vh; width: auto;" src="{{ asset('gridbg.gif') }}" alt="Other Image"/>
+    <img class="mx-auto position-fixed bg-dark" 
+     style="z-index: -100000; filter: blur(2px) brightness(66%); height: 102vh; width: auto; 
+            mask-image: linear-gradient(to right, transparent, black 20%, black 80%, transparent);" 
+     src="{{ asset('gridbg.gif') }}" 
+     alt="Other Image"/>
 
     <div class="rounded-circle bg-dark border border-light">
         <img class="m-2" style="height: 15vh; width: auto;" src="{{ asset('foundtexaspanda.svg') }}" alt="foundtexaspanda"/>
     </div>
-    <div class="container m-md-1 p-md-2 bg-main-dark-translucent rounded-5 border border-light d-flex flex-column align-items-center justify-content-around" style="min-height: 35vh;">
-        <div class="row mt-md-0 mt-md-3 m-1">
-            <h2 class="p-md-2 my-1 text-center accent-color"> <i class="fa fa-laptop fa-xs" aria-hidden="true"></i> Web & Game Dev <i class="fa fa-gamepad fa-md " aria-hidden="true"></i> </h2>
-        </div>
-        <div class="row mx-md-5">
-            <!-- Added 'typing-effect' class to apply the typing animation -->
-            <p class="typing-effect white-text text-justify text-lg m-1 fs-6">
-                Greetings! Welcome to my corner of the web. I'm Rodolfo also known as FoundTexas. I'm a computer scientist specialized in 3D Graphics, with skill on Project Management, Web and Game Development. I`m a team player and believe that diverse perspectives fuel innovation, leading to significant and immersive experiences for the users.
-            </p>
-        </div>
-        <div>
-            <button type="button" class="custom-btn rounded-2 p-1 m-2 bg-accent text-white" onclick="navigateToSectionAndCloseModal('timeline')" data-bs-dismiss="modal">
-                <h5 class="p-0 m-0"> &nbsp;<i class="fa fa-file" aria-hidden="true"></i> CV&nbsp;</h5>
-            </button>
+    <div class="rounded-trapezoid container-md bg-light opacity-75 p-1 d-flex flex-column align-items-center justify-content-center" style="min-height: 35vh;">
+        <div class=" container-fluid rounded-trapezoid bg-main-dark-translucent d-flex flex-column align-items-center justify-content-around" style="min-height: 35vh;">
+            <div class="row mt-md-0 mt-md-3 m-1">
+                <h2 class="p-md-2 my-1 text-center accent-color"> <i class="fa fa-laptop fa-xs" aria-hidden="true"></i> Web & Game Dev <i class="fa fa-gamepad fa-md " aria-hidden="true"></i> </h2>
+            </div>
+            <div class="row mx-4 mx-md-5">
+                <!-- Added 'typing-effect' class to apply the typing animation -->
+                <p class="typing-effect white-text text-justify text-lg m-1 fs-6">
+                    Greetings! Welcome to my corner of the web. I'm Rodolfo also known as FoundTexas. I'm a computer scientist specialized in 3D Graphics, with skill on Project Management, Web and Game Development. I`m a team player and believe that diverse perspectives fuel innovation, leading to significant and immersive experiences for the users.
+                </p>
+            </div>
+            <div>
+                <button type="button" class="custom-btn rounded-2 p-1 m-2 bg-accent text-white" onclick="navigateToSectionAndCloseModal('timeline')" data-bs-dismiss="modal">
+                    <h5 class="p-0 m-0"> &nbsp;<i class="fa fa-file" aria-hidden="true"></i> CV&nbsp;</h5>
+                </button>
+            </div>
         </div>
     </div>
 </section>
