--- a/templates/pausemenu.html.twig
+++ b/templates/pausemenu.html.twig
@@ -1,20 +1,17 @@
 <!-- Collapsible Navbar -->
-<div class="collapse navbar-collapse collapse position-sticky fixed-top" id="navbarCollapse" style="width:100%; z-index: 1040;">
+<div class="collapse navbar-collapse collapse position-sticky fixed-top d-flex justify-content-center" id="navbarCollapse" style="width:100%; z-index: 1040;">
 
-	<nav class="navbar navbar-dark navbar-expand-md bg-main p-0 m-0" style="min-height:10vh;">
-		<div class="d-flex w-75 align-items-center  justify-content-md-between justify-align-content-start row p-0 m-0">
+	<nav class=" navbar navbar-dark navbar-expand-lg sin-down-div p-0 m-0 d-flex justify-content-center" style="scale:102%; min-height:2vh;">
+		<button class=" mt-3 col-auto navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+			<img class="" style="height: 1vh; width: auto;" src="{{ asset('foundtexaspanda.svg') }}" alt="foundtexaspanda"/>
+		</button>
 
-			<button class=" col-auto navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-
-			<div class="col-3 d-none d-md-block">
+		<div class="align-items-center w-100 justify-content-center row p-0 m-3">
+			<div class="col-3 d-none d-lg-block">
 				<img class="img-fluid" src="bannerPandaold.png" alt="Other Image">
 			</div>
-			<a class="col-4 p-0 m-0 navbar-brand text-center" href="/">FoundTexas</a>
 
-
-			<div class="col-12 col-md-6">
+			<div class="col-auto">
 				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 					<div class="navbar-nav">
 						<a class="nav-link active" aria-current="page" href="/">Games</a>
@@ -27,13 +24,13 @@
 			</div>
 		</div>
 	</nav>
+
 </div>
 
 <button class="custom-btn position-fixed rounded-4 bg-accent d-flex align-items-center" style="z-index: 1050; top: 5px; right: 5px;" onclick="playSound('audiopress')" data-bs-target="#pauseMenuModal" aria-label="Pause menu button" data-bs-toggle="modal" type="button">
 	<i class="fa fa-home my-2 mx-1 fa-2xl" aria-hidden="true" style="color: #ffffff;"></i>
-	<p class="p-0 m-0 d-none d-md-block">MENU</p>
+	<p class="p-0 m-0 d-none d-md-block">PAUSE</p>
 </button>
-
 
 <!-- Modal -->
 <div class="modal fade" id="pauseMenuModal" tabindex="-1" aria-label="Pause menu modal" aria-labelledby="pauseMenuModalLabel" aria-hidden="true">
@@ -89,6 +86,23 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/3.0.1/js.cookie.min.js"></script>
+
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+    var navbarToggler = document.querySelector('.navbar-toggler');
+    var mainNav = document.querySelector('.navbar');
+    var navbarCollapse = document.getElementById('navbarNavAltMarkup');
+
+    navbarCollapse.addEventListener('show.bs.collapse', function () {
+        mainNav.classList.add('expanded');
+    });
+
+    navbarCollapse.addEventListener('hide.bs.collapse', function () {
+        mainNav.classList.remove('expanded');
+    });
+});
+
+</script>
 
 <script>
 	// Function to navigate to section and close the modal
