--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -2,7 +2,7 @@ body {
   overflow-x: hidden;
   width: 100%;
   max-width: 100%;
-  background-color: #382838;
+  background-color: #000000;
   
 }
 
@@ -58,7 +58,7 @@ a, label, p, h1, h2, h3, h4, h5, h6, li, span {
   background: linear-gradient(to bottom right, #6F1B6F, #57a9a1);
 }
 .bg-main-gradient-circle {
-  background: linear-gradient(to bottom right, #6F1B6F, #57a9a1);
+  background: linear-gradient(to bottom right, #421042, #315f5b);
 }
 
 .bg-main-gradient-alter {
@@ -66,7 +66,7 @@ a, label, p, h1, h2, h3, h4, h5, h6, li, span {
 }
 
 .bg-main-dark {
-  background-color: #211e22;
+  background-color: #2e0e2e;
 }
 
 .bg-main-dark-translucent {
@@ -152,4 +152,82 @@ html {
   --bs-btn-hover-color: #4D114D;
   --bs-btn-hover-bg: #ffffff;
   --bs-btn-hover-border-color: #6F1B6F;
+}
+
+.sin-up-div{
+  background: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgb(56, 13, 56) 50%);
+  clip-path: polygon( 15.884% 12.214%,15.884% 12.214%,12.891% 11.848%,10.212% 10.974%,7.848% 9.721%,5.798% 8.217%,4.064% 6.593%,2.645% 4.975%,1.54% 3.492%,0.752% 2.274%,0.278% 1.449%,0.12% 1.146%,0.12% 99.237%,99.94% 99.237%,99.94% 1.146%,99.94% 1.146%,99.781% 1.455%,99.305% 2.297%,98.514% 3.536%,97.408% 5.042%,95.988% 6.68%,94.257% 8.318%,92.215% 9.823%,89.863% 11.063%,87.203% 11.904%,84.236% 12.214%,84.236% 12.214%,81.517% 11.917%,79.488% 11.108%,77.976% 9.912%,76.808% 8.453%,75.812% 6.856%,74.817% 5.244%,73.649% 3.743%,72.136% 2.477%,70.107% 1.569%,67.389% 1.146%,67.389% 1.146%,64.644% 1.313%,62.574% 2.016%,61.01% 3.131%,59.783% 4.538%,58.724% 6.112%,57.665% 7.732%,56.438% 9.275%,54.874% 10.617%,52.804% 11.638%,50.06% 12.214%,50.06% 12.214%,47.288% 12.148%,45.208% 11.423%,43.649% 10.2%,42.436% 8.639%,41.396% 6.901%,40.357% 5.144%,39.144% 3.53%,37.584% 2.219%,35.504% 1.371%,32.732% 1.146%,32.732% 1.146%,29.985% 1.574%,27.946% 2.497%,26.439% 3.785%,25.285% 5.309%,24.308% 6.941%,23.331% 8.552%,22.178% 10.014%,20.67% 11.197%,18.631% 11.974%,15.884% 12.214% );
+}
+
+.sin-down-div{
+  width:100%;
+  background: linear-gradient(0deg, rgb(43, 10, 43) 50%, rgb(0, 0, 0) 100%); 
+  clip-path: polygon( 17.428% 99.296%,17.428% 99.296%,14.394% 98.632%,11.6% 96.943%,9.063% 94.486%,6.804% 91.518%,4.84% 88.3%,3.191% 85.087%,1.876% 82.14%,0.913% 79.715%,0.322% 78.07%,0.12% 77.465%,0.12% 0.704%,99.88% 0.704%,99.88% 77.465%,99.88% 77.465%,99.719% 78.076%,99.24% 79.735%,98.442% 82.18%,97.329% 85.149%,95.903% 88.38%,94.165% 91.611%,92.117% 94.58%,89.761% 97.025%,87.1% 98.685%,84.135% 99.296%,84.135% 99.296%,81.418% 99.022%,79.386% 98.275%,77.869% 97.172%,76.694% 95.826%,75.691% 94.352%,74.688% 92.866%,73.513% 91.481%,71.996% 90.313%,69.964% 89.475%,67.248% 89.085%,67.248% 89.085%,64.535% 89.239%,62.545% 89.887%,61.097% 90.917%,60.01% 92.214%,59.104% 93.666%,58.198% 95.161%,57.111% 96.584%,55.663% 97.823%,53.674% 98.765%,50.962% 99.296%,50.962% 99.296%,48.192% 99.235%,46.116% 98.566%,44.558% 97.438%,43.346% 95.998%,42.308% 94.394%,41.27% 92.774%,40.058% 91.285%,38.5% 90.075%,36.423% 89.292%,33.654% 89.085%,33.654% 89.085%,30.927% 89.48%,28.937% 90.331%,27.498% 91.519%,26.428% 92.925%,25.541% 94.431%,24.654% 95.917%,23.584% 97.266%,22.145% 98.358%,20.154% 99.074%,17.428% 99.296% );
+}
+
+.sin-down-div.expanded{
+  background: linear-gradient(0deg, rgba(43,10,43,1) 0%, rgba(43,10,43,1) 100%);;
+  background-color: rgba(43,10,43,1);
+  clip-path: polygon(0 1%, 100% 0, 100% 100%, 0% 100%);
+  transition: 0.5s background-color ease;
+}
+
+.rounded-trapezoid{
+  clip-path: polygon( 0.245% 14.876%,0.245% 14.876%,0.139% 12.594%,0.203% 10.381%,0.425% 8.277%,0.791% 6.323%,1.286% 4.559%,1.898% 3.025%,2.613% 1.762%,3.418% 0.81%,4.298% 0.209%,5.241% 0%,94.759% 0%,94.759% 0%,95.702% 0.209%,96.582% 0.81%,97.387% 1.762%,98.102% 3.025%,98.714% 4.559%,99.209% 6.323%,99.575% 8.277%,99.797% 10.381%,99.861% 12.594%,99.755% 14.876%,93.357% 90.124%,93.357% 90.124%,93.163% 91.798%,92.882% 93.359%,92.519% 94.793%,92.084% 96.084%,91.583% 97.218%,91.024% 98.18%,90.414% 98.954%,89.762% 99.525%,89.075% 99.879%,88.36% 100%,11.64% 100%,11.64% 100%,10.925% 99.879%,10.238% 99.525%,9.586% 98.954%,8.976% 98.18%,8.417% 97.218%,7.916% 96.084%,7.481% 94.793%,7.118% 93.359%,6.837% 91.798%,6.643% 90.124%,0.245% 14.876% );
+}
+
+.rounded-trapezoid-alter{
+  clip-path: polygon( 0.282% 84.684%,0.282% 84.684%,0.171% 87.03%,0.232% 89.307%,0.451% 91.472%,0.815% 93.484%,1.31% 95.301%,1.923% 96.881%,2.639% 98.183%,3.445% 99.165%,4.328% 99.784%,5.274% 100%,94.726% 100%,94.726% 100%,95.672% 99.784%,96.555% 99.165%,97.361% 98.183%,98.077% 96.881%,98.69% 95.301%,99.185% 93.484%,99.549% 91.472%,99.768% 89.307%,99.829% 87.03%,99.718% 84.684%,93.373% 10.064%,93.373% 10.064%,93.177% 8.357%,92.894% 6.765%,92.53% 5.303%,92.095% 3.987%,91.594% 2.832%,91.036% 1.853%,90.428% 1.065%,89.778% 0.483%,89.093% 0.123%,88.381% 0%,11.619% 0%,11.619% 0%,10.907% 0.123%,10.222% 0.483%,9.572% 1.065%,8.964% 1.853%,8.406% 2.832%,7.905% 3.987%,7.47% 5.303%,7.106% 6.765%,6.823% 8.357%,6.627% 10.064%,0.282% 84.684% );
+}
+
+.stack {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.stack span {
+  /*font-weight: bold;*/
+  grid-row-start: 1;
+  grid-column-start: 1;
+  font-size: 2.5rem;
+  --stack-height: calc(100% / var(--stacks) - 1px);
+  --inverse-index: calc(calc(var(--stacks) - 1) - var(--index));
+  --clip-top: calc(var(--stack-height) * var(--index));
+  --clip-bottom: calc(var(--stack-height) * var(--inverse-index));
+  clip-path: inset(var(--clip-top) 0 var(--clip-bottom) 0);
+  animation: stack 340ms cubic-bezier(.46,.29,0,1.24) 0 backwards calc(var(--index) * 120ms), glitch 1s ease infinite 1s alternate-reverse;
+}
+
+.stack span:nth-child(odd) { --glitch-translate: 8px; }
+.stack span:nth-child(even) { --glitch-translate: -8px; }
+
+@keyframes stack {
+  0% {
+    opacity: 0;
+    transform: translateX(-70%);
+    text-shadow: -2px 3px 0 red, 2px -3px 0 blue;
+  };
+  60% {
+    opacity: 0.5;
+    transform: translateX(70%);
+  }
+  80% {
+    transform: none;
+    opacity: 1;
+    text-shadow: 2px -3px 0 red, -2px 3px 0 blue;
+  }
+  100% {
+    text-shadow: none;
+  }
+}
+
+@keyframes glitch {
+  0% {
+    text-shadow: -2px 3px 0 red, 2px -3px 0 blue;
+    transform: translate(var(--glitch-translate));
+  }
+  2% {
+    text-shadow: 2px -3px 0 red, -2px 3px 0 blue;
+  }
+  4%, 100% {  text-shadow: none; transform: none; }
 }
