--- a/templates/index/GameHighlights.twig
+++ b/templates/index/GameHighlights.twig
@@ -35,46 +35,77 @@
 		left: 50%;
 		transform-origin: center center 0;
 		transition: transform 0.5s;
+
+		 box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2), 
+                        0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .item:hover {
+		transform: translate(-50%, -50%) scale(1.2);
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3), 
+                0 8px 10px rgba(0, 0, 0, 0.15);
+}
+
+#games {
+		width: 100%;
+            height: 100%;
+            background-image: url("{{ asset('bg-graph.svg') }}");
+            background-size: cover; /* Make the background cover the entire container */
+            background-repeat: no-repeat; /* Ensure the background does not repeat */
+            background-position: center;
 	}
+
 </style>
 
-<div class="row justify-content-center bg-main-dark p-0 m-0">
-	<h3 class='text-center py-3 m-0'>Game Highlights</h3>
-</div>
+<div id="games" class=" bg-main-dark p-0 m-0 rounded-top-5">
 
-<section id="test" class="bg-main-dark p-0 m-0 d-flex justify-content-evenly" style="min-height: 80vh; align-items: center; overflow: hidden; perspective: 3000px;">
-
-	<button class="carousel-control-prev" type="button" onclick="rotateCarousel(-{{games|length}})">
-		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		<span class="visually-hidden">Previous</span>
-	</button>
-
-	<div class="carousel row">
-
-		{% for game in games %}
-			<div class="item bg-dark border-3 rounded-4" style="width: 50vw; height: 50vh; position: absolute; top: 50%; left: 50%; background-image: url('{{ game.iconref }}'); transform: translate(-50%, -50%) rotateY({{ ((loop.index - 1 ) * ( (360 / games|length)) ) }}deg) translateZ(1000px);">
-				<div class="container m-5 row justify-content-center bg-main-dark-translucent p-3 rounded-4" >
-					<h5 class="text-white text-center" style="margin: 0; text-align:">{{ game.name }}</h5>
-
-					<button type="button" class="col-auto custom-btn rounded-2 p-1 mt-4 mb-2 bg-accent text-white" onclick="window.location.href='{{ path('app_project_detail', {'id': game.id}) }}'" data-bs-dismiss="modal">
-					&nbsp;&nbsp;<i class="fa fa-play" aria-hidden="true"></i>&nbsp;&nbsp;
-					</button>
-				</div>
+	<div class="w-100 d-flex justify-content-center" >
+		<div class="col-12 col-md-6 rounded-trapezoid-alter py-2 bg-main d-flex justify-content-center" >
+			<div class=" p-0 m-0 stack" style="--stacks: 3;">
+				<span class="p-3 text-center" style="--index: 0;">GAME HIGHLIGHTS</span>
+				<span class="p-3 text-center" style="--index: 1;">GAME HIGHLIGHTS</span>
+				<span class="p-3 text-center" style="--index: 2;">GAME HIGHLIGHTS</span>
 			</div>
-		{% endfor %}
-
+		</div>
 	</div>
 
-	<button class="carousel-control-next" type="button" onclick="rotateCarousel({{games|length}})">
-		<span class="carousel-control-next-icon" aria-hidden="true"></span>
-		<span class="visually-hidden">Previous</span>
-	</button>
+	<section id="test" class="p-0 m-0 d-flex justify-content-center" style="min-height: 69vh; align-items: center; overflow: hidden; perspective: 6000px;">
 
-</section>
+		<button class="carousel-control-prev" type="button" onclick="rotateCarousel({{games|length}})">
+		<div class="rounded-circle bg-dark p-3 border border-2 border-light" >
+			<span class="carousel-control-prev-icon p-3" aria-hidden="true"></span>
+			<span class="visually-hidden">Previous</span>
+			</div>
+		</button>
 
-<div class="row justify-content-center bg-main-dark p-0 m-0">
-	<button type="button" class="col-auto custom-btn rounded-2 p-1 mt-3 mb-5 bg-accent text-white" onclick="window.location.href='{{ path('app_game_projects', {'type': type}) }}'" data-bs-dismiss="modal">&nbsp;&nbsp;All
-		{{type}}...&nbsp;&nbsp;</button>
+		<div class="carousel row">
+
+			{% for game in games %}
+				<div class="item bg-dark border-3 rounded-4" style="width: 60vw; height: 40vh; position: absolute; top: 50%; left: 50%; background-image: url('{{ game.iconref }}'); transform: translate(-50%, -50%) rotateY({{ ((loop.index - 1 ) * ( (360 / games|length)) ) }}deg) translateZ(1000px);">
+					<div class="container m-5 row justify-content-center bg-main-dark-translucent p-3 rounded-4">
+						<h5 class="text-white text-center" style="margin: 0; text-align:">{{ game.name }}</h5>
+
+						<a type="button" href="{{game.linkref ?? path('app_project_detail', {'id': game.id}) }}" class="col-auto custom-btn rounded-2 p-1 mt-4 mb-2 bg-accent text-white text-decoration-none">
+							&nbsp;&nbsp;<i class="fa fa-play" aria-hidden="true"></i>&nbsp;&nbsp;
+						</a>
+					</div>
+				</div>
+			{% endfor %}
+
+		</div>
+
+		<button class="carousel-control-next" type="button" onclick="rotateCarousel(-{{games|length}})">
+			<div class="rounded-circle bg-dark p-3 border border-2 border-light" >
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="visually-hidden">Previous</span>
+				</div>
+		</button>
+
+	</section>
+	<div class="row justify-content-center p-0 m-0">
+		<button type="button" class="col-auto custom-btn rounded-2 p-1 mt-3 mb-5 bg-accent text-white" onclick="window.location.href='{{ path('app_game_projects', {'type': type}) }}'" data-bs-dismiss="modal">&nbsp;&nbsp;All
+			{{type}}...&nbsp;&nbsp;</button>
+	</div>
 </div>
 
 
